added some handlebars and styles

--- a/webServer/views/404.hbs
+++ b/webServer/views/404.hbs
@@ -3,7 +3,7 @@
 <link>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>weather</title>
+<title>404</title>
 {{!--
 <link rel="stylesheet" href="../public/style.css">
 </link>
@@ -13,8 +13,8 @@
 
 <body>
     <div class="main-container">
-        <h1>{{>header}}</h1>
-        <p> use this site to get{{title}}</p>
+        {{>header}}
+        <h1>{{msg}}</h1>
     </div>
     {{>footer}}
 
