--- a/webServer/public/style.css
+++ b/webServer/public/style.css
@@ -1,13 +1,64 @@
 *{
-    margin: 0;padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    text-transform: capitalize;
 }
-h1{
-    width: fit-content;
-    background-color: aquamarine;
-    color:rebeccapurple
+body{
+    padding: 16px 0px;
+    color:#333333;
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 800px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+
+}
+.main-container{
+    flex-grow: 1;
 }
 
-img{
-    width: 100%;
-    height: 100%;
+h1{
+    /* font-size: 50px; */
 }
+
+ul{
+    display: flex;
+    padding-inline-start: 0px !important;
+}
+ ul li{
+    list-style: none;
+    margin-right: 28px;
+    border: 1px solid #565454;
+    padding: 6px;
+    min-width: 60px;
+    text-align: center;
+    border-radius: 0.5em;
+    height: fit-content;
+ }
+
+ ul li a{
+    text-decoration: none;
+    color: #565454;
+    /* font-size: 20px; */
+ }
+ span{
+    font-size: 20px;
+ }
+ .about{
+    width: 250px;
+ }
+ .headerSection{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px  solid #bcbcbc;
+    padding-bottom: 16px;
+
+ }
+ .footer{
+    border-top: 1px  solid #bcbcbc;
+    padding-top: 16px;
+ }
