--- a/webServer/views/about.hbs
+++ b/webServer/views/about.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,16 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./app.js"></script>
 </head>
+
 <body>
-    <h1>this is about page</h1>
-    <img src="./Iron-Man-bar-Iron-Man-2-Robert-Downey-Jr-Tony-Stark-Sense-142629-wallhere.com.jpg" alt="image">
+    <div class="main-container">
+        <h1>{{>header}}</h1>
+
+        <p>this is about page</p>
+    <img class="about" src="./Iron-Man-bar-Iron-Man-2-Robert-Downey-Jr-Tony-Stark-Sense-142629-wallhere.com.jpg" alt="image">
+    </div>
+   
+    {{>footer}}
 </body>
+
 </html>
