--- a/webServer/views/help.hbs
+++ b/webServer/views/help.hbs
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Help Page</title>
-
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>this is help page</h1>
+
+    <div class="main-container">
+        <h1>{{>header}}</h1>
+
+        <p>this is help page</p>
+    </div>
+    {{>footer}}
+
 </body>
+
 </html>
