--- a/webServer/views/index.hbs
+++ b/webServer/views/index.hbs
@@ -3,6 +3,7 @@
 <link>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>weather</title>
 {{!--
 <link rel="stylesheet" href="../public/style.css">
@@ -15,9 +16,19 @@
     <div class="main-container">
         <h1>{{>header}}</h1>
         <p> use this site to get{{title}}</p>
+        <div class="form">
+
+        <form style="display:flex; height:100%; align-items:center; justify-content:center">
+            <input type="text" placeholder="location">
+            <button type="submit">SEARCH</button>
+        </form>
+            <p id="message-1"></p>
+            <p id="message-2"></p>
+        </div>
     </div>
     {{>footer}}
 
+    <script src="./app.js"></script>
 </body>
 
 </html>
